[metadata]
name = xmltools
author = Luis Rueda
author-email = userlerueda@gmail.com
summary = XML Tools
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/userlerueda/xmltools
project_urls =
    Bug Tracker = https://github.com/userlerueda/xmltools/issues
    Documentation = https://github.com/userlerueda/xmltools/docs
    Source Code = https://github.com/userlerueda/xmltools
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
keywords =
    xml

[files]
packages =
    xmltools

[entry_points]
console_scripts =
    xmltools = xmltools.cmd.xmltools:main
